# react-native-gesture-handler

./: .depcheckrc  .eslintignore  .eslintrc.json  .flowconfig  .git-blame-ignore-revs  .gitignore  .lintstagedrc.json  .npmignore  .prettierrc.json  .travis.yml  .yarnclean  0213621d.60f69d1f.js  0213621d.6a417f7e.js  0213621d.74ac1705.js  0213621d.a3b141e0.js  0213621d.bac15f5a.js  04b294f3.10209cd8.js  04b294f3.35b64593.js  05efa67e.00f529e5.js  05efa67e.0ecf3901.js  05efa67e.3eaf4bb0.js  05efa67e.45e964a2.js  05efa67e.56cc8d43.js  05efa67e.640661c7.js  05efa67e.6817f8db.js  05efa67e.893c9520.js  05efa67e.9b2bb5c4.js  05efa67e.a9162bea.js  05efa67e.c8bc6701.js  05efa67e.e99c2bb0.js  060d3852.13b4c9dd.js  060d3852.14e74a87.js  060d3852.29e8ece8.js  060d3852.2cbeb511.js  060d3852.443fbb8a.js  060d3852.7a9309f5.js  060d3852.7fce1c31.js  060d3852.852c7292.js  060d3852.a317a85d.js  060d3852.b0588e6a.js  (+3748 more)
.claude/: launch.json
.husky/: pre-commit
android/: CMakeLists.txt  build.gradle  gradle.properties  gradlew  settings.gradle  spotless.gradle
android/expo/: linking.gradle
android/fabric/src/main/java/com/swmansion/gesturehandler/: ReactContextExtensions.kt
android/gradle/wrapper/: gradle-wrapper.properties
android/lib/: build.gradle  proguard-rules.pro
android/lib/src/main/java/com/swmansion/gesturehandler/: BaseDragGestureHandler.java  BaseGestureHandlerInteractionController.java  BaseGestureHandlerInteractionController.kt  CustomGestureHandler.kt  DragDropGestureHandler.java  DragGestureHandler.java  DragGestureUtils.java  DropGestureHandler.java  Extensions.kt  FlingGestureHandler.java  FlingGestureHandler.kt  GestureHandler.java  GestureHandler.kt  GestureHandlerAssertions.java  GestureHandlerInteractionController.java  GestureHandlerInteractionController.kt  GestureHandlerInteractionManager.java  GestureHandlerMotionEventAdapter.java  GestureHandlerOrchestrator.java  GestureHandlerOrchestrator.kt  GestureHandlerRegistry.java  GestureHandlerRegistry.kt  GestureHandlerRegistryImpl.java  GestureHandlerRegistryImpl.kt  GestureHandlerScaleDetector.java  GestureHandlerViewWrapper.java  GestureUtils.java  GestureUtils.kt  LongPressGestureHandler.java  LongPressGestureHandler.kt  ManualGestureHandler.kt  MotionEvent.java  NativeViewGestureHandler.java  NativeViewGestureHandler.kt  OnDragEventListenerImpl.java  OnTouchEventListener.java  OnTouchEventListener.kt  OnTouchEventListenerImpl.java  PanGestureHandler.java  PanGestureHandler.kt  (+17 more)
android/lib/src/main/java/com/swmansion/gesturehandlerv2/: Extensions.kt  FlingGestureHandler.kt  GestureHandler.kt  GestureHandlerInteractionController.kt  GestureHandlerOrchestrator.kt  GestureHandlerRegistry.kt  GestureUtils.kt  LongPressGestureHandler.kt  ManualGestureHandler.kt  NativeViewGestureHandler.kt  OnTouchEventListener.kt  PanGestureHandler.kt  PinchGestureHandler.kt  PointerEventsConfig.kt  RotationGestureDetector.kt  RotationGestureHandler.kt  ScaleGestureDetector.java  TapGestureHandler.kt  ViewConfigurationHelper.kt
android/lib/src/test/java/com/swmansion/gesturehandler/: ExampleUnitTest.java
android/noreanimated/src/main/java/com/swmansion/gesturehandler/: ReanimatedEventDispatcher.kt
android/nosvg/src/main/java/com/swmansion/gesturehandler/: RNSVGHitTester.kt
android/package73/src/main/java/com/swmansion/gesturehandler/: RNGestureHandlerPackage.kt
android/package77/src/main/java/com/swmansion/gesturehandler/: RNGestureHandlerPackage.kt
android/paper/src/main/java/com/swmansion/gesturehandler/: NativeRNGestureHandlerModuleSpec.java  ReactContextExtensions.kt
android/react-native/: react.gradle
android/react-native/ReactAndroid/: build.gradle
android/react-native/android/com/facebook/react/react-native/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
android/react-native/scripts/: .packager.bat  launchPackager.bat
android/react-native/template/android/: settings.gradle
android/src/fabric/java/com/swmansion/gesturehandler/: RNGestureHandlerComponentsRegistry.java  ReactContextExtensions.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/com/swmansion/gesturehandler/: GestureHandlerRegistry.java  GestureHandlerRegistryImpl.java  GestureHandlerViewWrapper.java  LongPressGestureHandler.java  NativeViewGestureHandler.java  RNGestureHandlerPackage.kt  TapGestureHandler.java
android/src/main/jni/: Android.mk  CMakeLists.txt  OnLoad.cpp  RNGestureHandlerComponentsRegistry.cpp  RNGestureHandlerComponentsRegistry.h  RNGestureHandlerModule.cpp  RNGestureHandlerModule.h  cpp-adapter.cpp
android/src/paper/java/com/swmansion/gesturehandler/: NativeRNGestureHandlerModuleSpec.java  ReactContextExtensions.kt
common/cpp/: Android.mk  CMakeLists.txt  RNGHTurboCppModule.cpp  RNGHTurboCppModule.h  RNGHTurboCppModule.mm
common/cpp/rngesturehandler/: RNGestureHandlerButtonComponentDescriptor.h  RNGestureHandlerButtonShadowNode.cpp  RNGestureHandlerButtonShadowNode.h  RNGestureHandlerButtonState.cpp  RNGestureHandlerButtonState.h  RNGestureHandlerRootViewComponentDescriptor.h  RNGestureHandlerRootViewShadowNode.cpp  RNGestureHandlerRootViewShadowNode.h  RNGestureHandlerRootViewState.cpp  RNGestureHandlerRootViewState.h
(+6114 files in other folders)
